WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301539
Selection reveal mode is not reset after reveal, and later results in an unwanted scrolling
https://bugs.webkit.org/show_bug.cgi?id=301539
Summary
Selection reveal mode is not reset after reveal, and later results in an unwa...
arno renevier
Reported
2025-10-27 16:28:05 PDT
In FrameSelection, m_selectionRevealMode flag is not reset after the selection is reveal. So, if a selection is revealed. And then some time later, the user focuses a different frame, a selection update will happen on the main frame (via a call to FrameSelection::updateCaretVisibility). Since reveal mode flag still has the initial value, the selection in the main frame will be revealed. It will cause unwanted scroll outside of the frame that the user has just focused. See also
rdar://163232293
Attachments
Add attachment
proposed patch, testcase, etc.
arno renevier
Comment 1
2025-10-27 17:19:43 PDT
<
rdar://problem/163232293
>
arno renevier
Comment 2
2025-10-27 17:22:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53061
EWS
Comment 3
2025-10-28 00:30:20 PDT
Committed
302228@main
(20e8b7686ab9): <
https://commits.webkit.org/302228@main
> Reviewed commits have been landed. Closing PR #53061 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug