Selection reveal mode is not reset after reveal, and later results in an unwanted scrolling https://bugs.webkit.org/show_bug.cgi?id=301539 rdar://163232293

Reviewed by Ryosuke Niwa.

Once the selection has been revealed, we can clear the flag to be sure
that it's not accidentally revealed again later (in which case, it could
result in incorrect scrolling).

Test: editing/selection/selection-in-scrolled-iframe.html

Test: editing/selection/selection-in-scrolled-iframe.html

* LayoutTests/editing/selection/selection-in-scrolled-iframe-expected.txt: Added.
* LayoutTests/editing/selection/selection-in-scrolled-iframe.html: Added.
* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::revealSelection):

Canonical link: https://commits.webkit.org/302228@main